Add missing fields to workflow steps matching upstream ml-commons builders
CommonValue.java — Added 13 new constants:
- IS_ENABLED_FIELD, RATE_LIMITER_FIELD, DEPLOY_SETTING_FIELD,
MODEL_NODE_IDS_FIELD (model registration fields)
- CLIENT_CONFIG_FIELD, CONNECTOR_URL_FIELD, HEADERS_FIELD (connector
fields)
- MODEL_FIELD, CONTEXT_MANAGEMENT_NAME_FIELD, CONTEXT_MANAGEMENT_FIELD
(agent fields)
- MEMORY_CONTAINER_ID_FIELD (memory spec field)
- RUNTIME_RESOURCES_FIELD (tool field)
- CONNECTOR_ACTION_NAME_FIELD (connector action field)

CreateConnectorStep.java — High priority:
- Added url, headers to optional inputs (unblocks MCP connector
creation)
- Added backend_roles, add_all_backend_roles, access_mode, client_config
to optional inputs
- Added name field to ConnectorAction parsing
- Wired all new fields into MLCreateConnectorInput.builder()

RegisterAgentStep.java — High priority:
- Added model field to optional keys (unblocks unified agent interface
via MLAgentModelSpec)
- Added context_management_name and context_management to optional keys
- Wired model spec parsing (model_id, model_provider, credential,
model_parameters)
- Wired context management parsing via ContextManagementTemplate.parse()
- Added memory_container_id to MLMemorySpec parsing

RegisterRemoteModelStep.java — Medium + Lower priority:
- Added is_enabled, rate_limiter, deploy_setting to optional inputs
- Added backend_roles, add_all_backend_roles, access_mode,
model_node_ids to optional inputs
- Wired all into MLRegisterModelInput.builder()

AbstractRegisterLocalModelStep.java + all 3 subclasses — Medium + Lower
priority:
- Added is_enabled, rate_limiter, deploy_setting, guardrails,
backend_roles, add_all_backend_roles, access_mode, model_node_ids to
optional keys in all local model steps
- Added interface to RegisterLocalPretrainedModelStep (was missing)
- Wired all new fields into the builder in the abstract class

ToolStep.java — Medium priority:
- Added runtime_resources to optional inputs
- Wired